@@ -1,8 +1,13 @@
 
 == ChangeLog (Coova Chilli current svn revision) ==
 
-* Experimenting with new option ''usetap'' to use a TAP instead of TUN
+== ChangeLog (Coova Chilli v1.0.4 svn revision ?) ==
+
+* Fixed issue with userurl being truncated (no query string)
+* Improved userurl handling and sending to uamhomepage and/or uamserver
+* Wait for local content script to exit and ensure a clean socket shutdown (by Christian Loitsch; needed for IE7 and embedded portal)
 * Fixed session-id not in access-request for UAM login bug
+* Experimenting with new option ''usetap'' to use a TAP instead of TUN
 
 == ChangeLog (Coova Chilli v1.0.3 svn revision 39) ==
 
